24 August 2016: Ralph
	- Fix #820: set sldns_str2wire_rr_buf() dual meaning len parameter
	  in each iteration in find_tag_datas().
	- unbound.conf.5 entries for define-tag, access-control-tag,
	  access-control-tag-action, access-control-tag-data, local-zone-tag,
	  and local-zone-override.
	  
23 August 2016: Wouter
	- Fix #804: unbound stops responding after outage.  Fixes queries
	  that attempt to wait for an empty list of subqueries.
	- Fix #804: lower num_target_queries for iterator also for failed
	  lookups.

8 August 2016: Wouter
	- Note that OPENPGPKEY type is RFC 7929.

4 August 2016: Wouter
	- Fix #807: workaround for possible some "unused" function parameters
	  in test code, from Jinmei Tatuya.

3 August 2016: Wouter
	- use sendmsg instead of sendto for TFO.

28 July 2016: Wouter
	- Fix #806: wrong comment removed.

26 July 2016: Wouter
	- nicer ratelimit-below-domain explanation.

22 July 2016: Wouter
	- Fix #801: missing error condition handling in
	  daemon_create_workers().
	- Fix #802: workaround for function parameters that are "unused"
	  without log_assert.
	- Fix #803: confusing (and incorrect) code comment in daemon_cleanup().

20 July 2016: Wouter
	- Fix typo in unbound.conf.

18 July 2016: Wouter
	- Fix #798: Client-side TCP fast open fails (Linux).

14 July 2016: Wouter
	- TCP Fast open patch from Sara Dickinson.
	- Fixed unbound.doxygen for 1.8.11.

7 July 2016: Wouter
	- access-control-tag-data implemented. verbose(4) prints tag debug.

5 July 2016: Wouter
	- Fix dynamic link of anchor-update.exe on windows.
	- Fix detect of mingw for MXE package build.
	- Fixes for 64bit windows compile.
	- Fix #788 for nettle 3.0: Failed to build with Nettle >= 3.0 and
	  --with-libunbound-only --with-nettle.

4 July 2016: Wouter
	- For #787: prefer-ip6 option for unbound.conf prefers to send
	  upstream queries to ipv6 servers.
	- Fix #787: outgoing-interface netblock/64 ipv6 option to use linux